// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FooterAbout /> renders correcty 1`] = `
<Flex
  backgroundColor="#FFF"
  color="#000"
  direction="column"
  gap={8}
  m={0}
  p={
    Array [
      "1.500rem",
      "3.000rem",
      "2.000rem 4.000rem",
    ]
  }
  width="100%"
>
  <Flex
    direction="column"
    gap={4}
    margin="auto"
    maxWidth="96.000rem"
  >
    <Heading
      as="h2"
      color="#000"
      fontSize="1.200rem"
      lineHeight="unset"
      margin="0 auto"
      px={4}
      textAlign="center"
    >
      À propos
    </Heading>
    <Flex
      justifyContent="center"
      maxWidth="100vw"
      sx={
        Object {
          "a": Object {
            "color": "inherit",
            "cursor": "pointer",
            "fontWeight": "bold",
          },
        }
      }
    >
      <WYSIWYGRender
        value="Ce site est fait par CapCo. C'est fou hein ?"
      />
    </Flex>
  </Flex>
</Flex>
`;

exports[`<FooterAbout /> renders correcty and displays social networks 1`] = `
<Flex
  backgroundColor="#FFF"
  color="#000"
  direction="column"
  gap={8}
  m={0}
  p={
    Array [
      "1.500rem",
      "3.000rem",
      "2.000rem 4.000rem",
    ]
  }
  width="100%"
>
  <Flex
    direction="column"
    gap={4}
    margin="auto"
    maxWidth="96.000rem"
  >
    <Heading
      as="h2"
      color="#000"
      fontSize="1.200rem"
      lineHeight="unset"
      margin="0 auto"
      px={4}
      textAlign="center"
    >
      À propos
    </Heading>
    <Flex
      justifyContent="center"
      maxWidth="100vw"
      sx={
        Object {
          "a": Object {
            "color": "inherit",
            "cursor": "pointer",
            "fontWeight": "bold",
          },
        }
      }
    >
      <WYSIWYGRender
        value="Ce site est fait par CapCo. C'est fou hein ?"
      />
    </Flex>
  </Flex>
  <Flex
    alignSelf="center"
    as="ul"
    flexWrap="wrap"
    gap={6}
    id="footer-social-networks"
    justifyContent="center"
    maxWidth="100%"
    ml="auto"
    mr="auto"
    px={4}
  >
    <Flex
      as="li"
      key="Facebook"
      sx={
        Object {
          "listStyle": "none",
        }
      }
      width="fit-content"
    >
      <Link
        className="external-link"
        color="inherit"
        display="flex"
        gap={1}
        href="fb.com"
        sx={
          Object {
            "&:hover, &:active, &:focus": Object {
              "color": "inherit",
            },
          }
        }
      >
        <Icon
          name="FACEBOOK"
        />
        <Text>
          Facebook
        </Text>
      </Link>
    </Flex>
    <Flex
      as="li"
      key="X"
      sx={
        Object {
          "listStyle": "none",
        }
      }
      width="fit-content"
    >
      <Link
        className="external-link"
        color="inherit"
        display="flex"
        gap={1}
        href="x.com"
        sx={
          Object {
            "&:hover, &:active, &:focus": Object {
              "color": "inherit",
            },
          }
        }
      >
        <Icon
          name="X"
        />
        <Text>
          X
        </Text>
      </Link>
    </Flex>
  </Flex>
</Flex>
`;
